<resources>
    <string name="app_name">Screen</string>
    <string name="smart_indoor_air_quality_meter">Smart Indoor Air Quality Meter</string>
    <string name="sign_in_with_email">Sign in with Email</string>
    <string name="facebook_application_id">436610905136379</string> <!--//1234-->
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">56789</string>

    <string name="name">name</string>
    <string name="add_device">Add Device</string>
    <string name="save">Save</string>
    <string name="search_area">Search Area</string>
    <string name="off">off</string>
    <string name="on">on</string>
    <string name="invite_link">Invite Link</string>
    <string name="turn_on_notifications">Turn on Notifications</string>
    <string name="notifications">Notifications</string>
    <string name="Email">Email</string>
    <string name="Name">Name</string>
    <string name="invite">INVITE</string>
    <string name="email">email</string>
    <string name="log_out">Log Out</string>

</resources>