<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="307dp"
    android:layout_height="45dp"
    android:background="@drawable/border"
    android:orientation="horizontal"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <TextView
        android:id="@+id/turn_on_notif"
        android:layout_width="297dp"
        android:layout_height="35dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:paddingTop="10dp"
        android:text="@string/turn_on_notifications"
        android:textColor="#FF018786"
        android:textSize="14sp"
        android:textStyle="normal" />

    <androidx.appcompat.widget.SwitchCompat
        android:layout_width="87dp"
        android:layout_height="38dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:gravity="center"
        android:textColor="#008F36"
        android:textOff="@string/off"
        android:textOn="@string/on"
        android:thumb="@drawable/thumb"
        app:showText="false"
        app:track="@drawable/track" />
</RelativeLayout>