<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".DeviceActivity">

    <ImageView
        android:id="@+id/activity_device"
        android:layout_width="match_parent"
        android:layout_height="156dp"
        android:layout_alignParentTop="true"
        android:background="#FF018786"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/left_arrow"
        android:layout_width="56dp"
        android:layout_height="38dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="67dp"
        app:srcCompat="@drawable/ic_left_arrow"
        app:tint="#FFFFFF"
        tools:layout_editor_absoluteY="93dp" />

    <TextView
        android:id="@+id/add_device"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_below="@id/activity_device"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_marginTop="60dp"
        android:text="@string/add_device"
        android:textColor="#001E20"
        android:textSize="14sp"
        android:textStyle="normal" />

    <ImageView
        android:id="@+id/add"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_below="@+id/add_device"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:src="@drawable/ic_baseline_add_circle_outline_24"
        app:tint="#FF018786"
        tools:layout_editor_absoluteY="361dp" />

    <EditText
        android:id="@+id/search"
        android:layout_width="283dp"
        android:layout_height="55dp"
        android:layout_below="@+id/add"
        android:layout_marginTop="90dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/border"
        android:hint="@string/search_area"
        android:textColorHint="#FF018786"
        android:textAlignment="textStart"/>

    <ImageView
        android:id="@+id/tab_save"
        android:layout_width="272dp"
        android:layout_height="75dp"
        android:layout_below="@id/search"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:src="@drawable/ic_sign_in_button" />

    <TextView
        android:id="@+id/tab_save_text"
        android:layout_width="272dp"
        android:layout_height="75dp"
        android:layout_alignTop="@+id/tab_save"
        android:layout_centerHorizontal="true"
        android:padding="25dp"
        android:text="@string/save"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="14sp" />

</RelativeLayout>




